--- a/style.css
+++ b/style.css
@@ -6,8 +6,41 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-image: url(https://picsum.photos/id/1080/6858/4574),
+    linear-gradient(rgba(239, 116, 255, 0.669), rgb(116, 116, 255, 0.669));
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h1 {
+  margin: 3%;
+  padding: 2%;
+  border-radius: 30px;
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 5%;
+  margin-bottom: 3%;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+}
+
 div {
   margin: 15px;
+  width: 90%;
 }
 
 .algo1, .algo3, .algo5 {
@@ -15,6 +48,7 @@ div {
   height: auto;
   color: white;
   padding: 10px 10px 10px 25px;
+  border-radius: 10px;
 }
 
 .algo2, .algo4 {
@@ -22,6 +56,7 @@ div {
   height: auto;
   color: white;
   padding: 10px 10px 10px 25px;
+  border-radius: 10px;
 }
 
 h2 {
