--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  cursor: default;
 }
 
 body {
@@ -16,6 +18,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  scroll-behavior: smooth;
 }
 
 h1 {
@@ -23,7 +26,7 @@ h1 {
   padding: 2%;
   border-radius: 30px;
   background-color: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(3px);
 }
 
 section {
@@ -35,10 +38,11 @@ section {
   margin-bottom: 3%;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(3px);
+  padding: 3% 0;
 }
 
-div {
+article {
   margin: 15px;
   width: 90%;
 }
@@ -51,7 +55,7 @@ div {
   border-radius: 10px;
 }
 
-.algo2, .algo4 {
+.algo2, .algo4, .algo6 {
   background-color: rgb(239, 116, 255);
   height: auto;
   color: white;
@@ -62,6 +66,7 @@ div {
 h2 {
   padding: 0 0 15px 0;
   color: black;
+  font-weight: 600;
 }
 
 p {
