--- a/style.css
+++ b/style.css
@@ -12,18 +12,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  background-image: url(https://picsum.photos/id/1080/6858/4574),
-    linear-gradient(rgba(239, 116, 255, 0.669), rgb(116, 116, 255, 0.669));
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  justify-content: center;
+  background-image: linear-gradient(rgba(239, 116, 255, 0.669), rgb(116, 116, 255, 0.669));
+  min-height: 100dvh;
   scroll-behavior: smooth;
+
 }
 
 h1 {
   margin: 3%;
-  padding: 2%;
+  padding: 2.5%;
   border-radius: 30px;
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(3px);
@@ -47,7 +45,7 @@ article {
   width: 90%;
 }
 
-.algo1, .algo3, .algo5 {
+.blue {
   background-color: rgb(116, 116, 255);
   height: auto;
   color: white;
@@ -55,7 +53,7 @@ article {
   border-radius: 10px;
 }
 
-.algo2, .algo4, .algo6 {
+.violet {
   background-color: rgb(239, 116, 255);
   height: auto;
   color: white;
@@ -71,4 +69,33 @@ h2 {
 
 p {
   font-size: 1.2em;
+}
+
+div {
+  display: flex;
+  flex-direction: row;
+}
+
+input {
+  border: 1px solid black;
+  border-radius: 50px;
+  text-align: center;
+}
+
+.convert {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 4% 0 0;
+  width: auto;
+}
+
+.c2f {
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.f2c {
+  display: inline-flex;
+  flex-direction: column;
 }
