--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   user-select: none;
 }
 
-h1 {
+header {
   margin: 3%;
   padding: 2.5%;
   border-radius: 30px;
@@ -27,7 +27,7 @@ h1 {
   backdrop-filter: blur(3px);
 }
 
-section {
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -98,4 +98,19 @@ input {
 .f2c {
   display: inline-flex;
   flex-direction: column;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 5%;
+  margin-bottom: 3%;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(3px);
+  padding: 3% 0;
+  width: 90%;
+  font-size: 1.5rem;
 }
