--- a/style.css
+++ b/style.css
@@ -20,9 +20,13 @@ body {
 }
 
 header {
-  margin: 3%;
-  padding: 2.5%;
-  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5%;
+  padding: 2% 0;
+  width: 90%;
+  border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(3px);
 }
@@ -65,6 +69,7 @@ h2 {
   padding: 0 0 15px 0;
   color: black;
   font-weight: 600;
+  opacity: 60%;
 }
 
 p {
@@ -105,12 +110,13 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 5%;
+  text-align: center;
+  margin: 5%;
   margin-bottom: 3%;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(3px);
-  padding: 3% 0;
+  padding: 2% 0;
   width: 90%;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
